ecmascript/parser/tests/typescript-errors/tsc/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument3/input.ts.stderr
error[1023]: An index signature parameter type must be either 'string' or 'number'
  --> $DIR/tests/typescript-errors/tsc/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument3/input.ts:12:22
   |
12 | declare var d: { [x: C]: C };
   |                      ^

